; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_hypertable.c_ts_rel_get_owner.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_hypertable.c_ts_rel_get_owner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_UNDEFINED_TABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [58 x i8] c"unable to get owner for relation with OID %u: invalid OID\00", align 1
@RELOID = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [61 x i8] c"unable to get owner for relation with OID %u: does not exist\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_rel_get_owner(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @OidIsValid(i32 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %15, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @ERROR, align 4
  %10 = load i32, i32* @ERRCODE_UNDEFINED_TABLE, align 4
  %11 = call i32 @errcode(i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @errmsg(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = call i32 @ereport(i32 %9, i32 %13)
  br label %15

15:                                               ; preds = %8, %1
  %16 = load i32, i32* @RELOID, align 4
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @ObjectIdGetDatum(i32 %17)
  %19 = call i32 @SearchSysCache1(i32 %16, i32 %18)
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @HeapTupleIsValid(i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %30, label %23

23:                                               ; preds = %15
  %24 = load i32, i32* @ERROR, align 4
  %25 = load i32, i32* @ERRCODE_UNDEFINED_TABLE, align 4
  %26 = call i32 @errcode(i32 %25)
  %27 = load i32, i32* %2, align 4
  %28 = call i32 @errmsg(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.1, i64 0, i64 0), i32 %27)
  %29 = call i32 @ereport(i32 %24, i32 %28)
  br label %30

30:                                               ; preds = %23, %15
  %31 = load i32, i32* %3, align 4
  %32 = call i64 @GETSTRUCT(i32 %31)
  %33 = inttoptr i64 %32 to %struct.TYPE_2__*
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  store i32 %35, i32* %4, align 4
  %36 = load i32, i32* %3, align 4
  %37 = call i32 @ReleaseSysCache(i32 %36)
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @OidIsValid(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @SearchSysCache1(i32, i32) #1

declare dso_local i32 @ObjectIdGetDatum(i32) #1

declare dso_local i32 @HeapTupleIsValid(i32) #1

declare dso_local i64 @GETSTRUCT(i32) #1

declare dso_local i32 @ReleaseSysCache(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
